@@ -38,9 +38,13 @@ if (TYPO3_MODE == 'BE') {
 #	t3lib_extMgm::addModule('tools', 'txsolrMAdmin', '', t3lib_extMgm::extPath($_EXTKEY) . 'mod_admin/');
 
 		// adding reports
-	$GLOBALS['TYPO3_CONF_VARS']['SC_OPTIONS']['reports']['tx_reports']['status']['providers']['solr'][] = 'tx_solr_report_SchemaStatus';
-	$GLOBALS['TYPO3_CONF_VARS']['SC_OPTIONS']['reports']['tx_reports']['status']['providers']['solr'][] = 'tx_solr_report_SolrStatus';
-	$GLOBALS['TYPO3_CONF_VARS']['SC_OPTIONS']['reports']['tx_reports']['status']['providers']['solr'][] = 'tx_solr_report_AccessFilterPluginInstalledStatus';
+	$GLOBALS['TYPO3_CONF_VARS']['SC_OPTIONS']['reports']['tx_reports']['status']['providers']['solr'] = array(
+		'tx_solr_report_SchemaStatus',
+		'tx_solr_report_SolrconfigStatus',
+		'tx_solr_report_SolrStatus',
+		'tx_solr_report_AccessFilterPluginInstalledStatus'
+	);
+
 
 		// adding the index report to the reports module
 	$GLOBALS['TYPO3_CONF_VARS']['SC_OPTIONS']['reports']['tx_solr']['index'] = array(
